# template-rs-api

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yml  flake.nix
.artifacts/examples/migrations/: 0001_todo.sql
.artifacts/license/: APACHE.LICENSE
.config/: default.config.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  docker.yml  release.yml  rust.yml  vault.yml
assets/: index.html
conduit/: Cargo.toml
conduit/src/: channels.rs  context.rs  main.rs  runtime.rs  settings.rs  states.rs  system.rs
conduit/src/api/: interface.rs  mod.rs
conduit/src/api/routes/: assets.rs
conduit/src/cli/: commands.rs  interface.rs  mod.rs
conduit/src/cli/args/: mod.rs  system.rs
conduit/src/cli/cmd/: mod.rs  system.rs
examples/wasm/: Cargo.toml
examples/wasm/src/: lib.rs  utils.rs
src/: app.rs  config.rs  lib.rs  main.rs  primitives.rs  server.rs  settings.rs
src/api/: app.rs  mod.rs  server.rs
src/api/routes/: mod.rs
src/app/: application.rs  init.rs  mod.rs  server.rs
src/config/: context.rs  database.rs  logger.rs  mod.rs  settings.rs  utils.rs
src/config/kinds/: logger.rs  server.rs
src/config/settings/: server.rs
src/ctx/: context.rs  mod.rs
src/models/: items.rs  mod.rs  sample.rs
src/platform/: init.rs  mod.rs  platform.rs  state.rs
src/platform/server/: builder.rs  mod.rs  server.rs
src/routes/: base.rs  items.rs  mod.rs
src/server/: builder.rs  server.rs
src/types/: mod.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  lib.rs  utils.rs
xtask/src/cli/: mod.rs
xtask/src/cmds/: build.rs  mod.rs
xtask/src/pipelines/: mod.rs
