[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = "template-api-rs is a complete template for creating high-preformance RESTful API's in Rust"
edition = "2021"
keywords = []
homepage = "https://gitlab.com/pzzld/templates/template-api-rs/wiki"
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/pzzld/templates/template-api-rs"
version = "0.0.2"

[workspace]
default-members = [
    "bin"
]
exclude = [
    "examples/wasm",
    "xtask"
]
members = [
    "bin",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = 'unwind'
rpath = false
opt-level = 'z'
overflow-checks = false
