[package]
categories = []
keywords = ["app", "binary", "clap", "cli", "template"]
name = "conduit"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
bench = true
name = "conduit"
path = "src/main.rs"
test = true

[build-dependencies]

[dependencies]
# Custom crates
acme = { features = ["net"], git = "https://github.com/FL03/acme", branch = "v0.2.5", version = "0.2.5" }
decanter = { features = ["derive"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

# Standard dependencies
async-trait = "0.1"
axum = { features = ["headers", "http2", "macros"], version = "0.6" }
axum-core = "0.3"
clap = { features = ["cargo", "derive", "env"], version = "4" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = [], version = "0.14" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6.0"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dev-dependencies]

