[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "xtask"
description = "xtask"
edition = "2021"
license = "Apache-2.0"
name = "xtask-sdk"
version = "0.1.0" # TODO: Update the package version

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[[bin]]
bench = false
name = "xtask"
test = false

[build-dependencies]

[dependencies]
anyhow = "1"
clap = { features = ["cargo", "derive", "env"], version = "4" }
config = "0.13"
glob = "0.3"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.24" }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]