[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "template-rs-wasm"
edition = "2021"
license = "Apache-2.0"
name = "template-rs-wasm"
version = "0.1.0"

[features]
default = []
full = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]


[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
futures = "0.3"
gloo = "0.8"
js-sys = "0.3"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
thiserror = "1"
tokio = { features = ["macros"], version = "1" }
wasm-bindgen = { features = ["serde-serialize"], version = "0.2.83" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
# wee_alloc = { optional = true, version = "0.4.5" } # unmaintained

[dependencies.web-sys]
features = [
    "Client",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Headers",
    "Node",
    "Window",
    "console"
]
 version = "0.3"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
